# auto-k8s-pilot

./: .gitignore  LICENSE  README.md  env.example  mcp-argocd.json  pyproject.toml
output/: cluster_summary.md  pods_explained.md  pods_overview.md
src/auto_k8s_pilot/: crew.py  main.py  settings.py
src/auto_k8s_pilot/config/: agents.yaml  tasks.yaml
src/auto_k8s_pilot/config/layers/: behavior.yaml  crew-infra-cluster.yaml  flow-infra-health.yaml
src/auto_k8s_pilot/tools/: __init__.py  argocd_tool.py  cloudflare_dns_tool.py  github_issue_tool.py  kubectl_tool.py  loki_tool.py  mcp_k8s_tool.py  openrouter_health_tool.py
src/latest_ai_development/: crew.py  main.py
src/latest_ai_development/config/layers/: behavior.yaml  flow-k8s-healthcheck.yaml
src/latest_ai_development/tools/: argocd_tool.py  loki_tool.py
tests/: conftest.py  test_argocd_tool.py  test_k8s_flow.py  test_kubectl_tool.py
