[project]
name = "auto_k8s_pilot"
version = "0.1.0"
description = "auto-k8s-pilot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
auto_k8s_pilot = "auto_k8s_pilot.main:run"
run_crew = "auto_k8s_pilot.main:run"
train = "auto_k8s_pilot.main:train"
replay = "auto_k8s_pilot.main:replay"
test = "auto_k8s_pilot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
]
